--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -18,3 +18,13 @@ jobs:
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           config_timezone: Europe/Paris
+
+      - name: LeetCode
+          uses: lowlighter/metrics@latest
+          with:
+            filename: metrics.plugin.leetcode.svg
+            token: NOT_NEEDED
+            base: ""
+            plugin_leetcode: yes
+            plugin_leetcode_sections: solved, skills, recent
+            plugin_leetcode_user: nassimch
