--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -22,9 +22,8 @@ jobs:
       - name: LeetCode
         uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.leetcode.svg
-          token: NOT_NEEDED
-          base: ""
-          plugin_leetcode: yes
-          plugin_leetcode_sections: solved, skills, recent
-          plugin_leetcode_user: nassimch
+          with:
+            token: ${{ secrets.METRICS_TOKEN }}
+            plugin_leetcode: yes
+            plugin_leetcode_user: nassimch
+
