--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -26,3 +26,11 @@ jobs:
           plugin_leetcode: yes
           plugin_leetcode_user: nassimch
 
+      - name: Half-year calendar
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
+          plugin_isocalendar: yes
+
+
