--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -22,6 +22,7 @@ jobs:
       - name: LeetCode
         uses: lowlighter/metrics@latest
         with:
+          filename: metrics.plugin.isocalendar.svg
           token: ${{ secrets.METRICS_TOKEN }}
           plugin_leetcode: yes
           plugin_leetcode_user: nassimch
